# Camera-Sensor-Dashboard

./: CMakeLists.txt  LICENSE  README.md  demo_features.md  run.sh
include/: PlaybackController.h  SensorDataGenerator.h
qml/: CameraView.qml  ControlPanel.qml  PlaybackControls.qml  SensorChart.qml  SettingsPanel.qml  main.qml
src/: CameraCapture.cpp  DataLogger.cpp  ImageProvider.cpp  SensorDataGenerator.cpp  main.cpp
